[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ora-core-neroflux"
version = "0.1.0"
description = "Deterministic ORA Core cognitive routing, emotional indexing, and post-update introspection modules."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "TwinsProductionAI" }
]
keywords = ["ora-core", "gpv2", "neroflux", "aletheia", "ancolie", "emotion", "rag", "companion", "post-maj", "cognitive-routing", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[tool.setuptools.packages.find]
where = ["src"]
